--- a/app/views/photos/_show.html.erb
+++ b/app/views/photos/_show.html.erb
@@ -1,20 +1,18 @@
-<div class="photo">
+<div class="photos">
   <% if photo.caption %>
-    <h3><%= photo.caption %></h3>
+    <h2><%= photo.caption %></h2>
   <% end %>
   <br>
   <%= image_tag photo.img.url %>
   <% tags = photo.tags %>
   <% self_tag = tags.where("user_id = ?", current_user.id).first %>
   <% tagged_users = tags.map { |tag| tag.tagged_user } %>
-  <div class="like-links group">
+  <div class="photo-like-links group">
     <%= render partial: "likes/show", locals: {object: photo, object_type: "Photo"} %>
   </div>
   <% unless tags.empty? %>
     <% unless self_tag.nil? %>
       <br>
-      <%= button_to "Remove your tag", tag_url(self_tag), method: :delete %>
-
       <form class="tag-form" action="<%= tag_url(self_tag) %>" data-remote="true" method="post">
         <input
           name="authenticity_token"
@@ -22,7 +20,7 @@
           value="<%= form_authenticity_token %>">
         <input type="hidden" name="tagged_user_id" value="<%= current_user.id %>">
         <input type="hidden" name="_method" value="DELETE">
-        <input type="submit" value="<%= "Remove Your Tag" %>">
+        <input class="friend-button" type="submit" value="<%= "Remove Tag" %>">
       </form>
 
     <% end %>
@@ -37,7 +35,7 @@
           type="hidden"
           value="<%= form_authenticity_token %>">
         <input type="hidden" name="tagged_user_id" value="<%= current_user.id %>">
-        <input type="submit" value="<%= "Tag Yourself!" %>">
+        <input class="friend-button" type="submit" value="<%= "Tag Yourself!" %>">
       </form>
     <% end %>
     <% unless friends.empty? %>
@@ -49,24 +47,25 @@
               type="hidden"
               value="<%= form_authenticity_token %>">
             <input type="hidden" name="tagged_user_id" value="<%= friend.id %>">
-            <input type="submit" value="<%= "Tag " + friend.name + "!" %>">
+            <input class="friend-button" type="submit" value="<%= "Tag " + friend.name + "!" %>">
           </form>
         <% end %>
       <% end %>
     <% end %>
   <% end %>
   <br>
-  <h4>Tagged in this photo:</h4>
-  <br>
-  <ul class="tagged-list">
-    <% tagged_users.each do |user| %>
-      <li class="tag-item">
-        <a href="<%= user_profile_url(user) %>">
-          <%= user.name %>
-        </a>
-      <li>
-    <% end %>
-  </ul>
+  <% unless tagged_users.empty? %>
+    <h3>Tagged in this photo:</h3>
+    <ul class="tagged-list">
+      <% tagged_users.each do |user| %>
+        <li class="tag-item">
+          <a href="<%= user_profile_url(user) %>">
+            <%= user.name %>
+          </a>
+        <li>
+      <% end %>
+    </ul>
+  <% end %>
   <br>
   <div class="comment-data">
     <h3>Comments</h3>
