fixed logout button

--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -159,6 +159,9 @@ header {
 .logout-button {
   width: 80px;
   height: 30px;
+  border: 1px solid white;
+  border-radius: 4px;
+  background: #77F2BB;
 }
 
 // MAIN STRUCTURE
