fixed album form styling

--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -415,6 +415,16 @@ header {
   float: left;
 }
 
+// ALBUM FORM
+
+.album-form {
+  margin-left: 70px;
+}
+
+.photo-select {
+  float: left;
+}
+
 // LIKES STYLING
 
 .like-links {
