getting ready to be shown

--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -3,7 +3,7 @@
     name="authenticity_token"
     type="hidden"
     value="<%= form_authenticity_token %>">
-  <input type="file" name="photo[img]">
+  <input style="width: 300px" type="file" name="photo[img]">
   <br>
   <label for="photo-caption">Optional Caption:</label>
   <input type="text" name="photo[caption]" id="photo-caption">
