--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -445,7 +445,9 @@ header {
   margin-bottom: 20px;
   padding-top: 20px;
   border-top: 2px solid white;
+  border-bottom: 2px solid white;
   text-align: center;
+  background: lightgrey;
 }
 
 // PHOTO SHOW STYLING
