--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -443,7 +443,8 @@ header {
   margin-left: 140px;
   margin-top: 20px;
   margin-bottom: 20px;
-  padding-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-top: 2px solid white;
   border-bottom: 2px solid white;
   text-align: center;
