--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -8,8 +8,7 @@
 <div class="main">
   <div class="about">
     <h1>OCULAR</h1>
-    <p>Is a facebook clone made by Brandon Danker for
-    the final project at App Academy. It has the following features:
+    <p>Is a facebook clone made by Brandon Danker. It has the following features:
     </p>
     <ul>
       <li>Sign Up and Sign In</li>
