--- a/app/views/photos/_show.html.erb
+++ b/app/views/photos/_show.html.erb
@@ -7,7 +7,7 @@
   <% tags = photo.tags %>
   <% self_tag = tags.where("user_id = ?", current_user.id).first %>
   <% tagged_users = tags.map { |tag| tag.tagged_user } %>
-  <div class="like-links group">
+  <div class="photo-like-links group">
     <%= render partial: "likes/show", locals: {object: photo, object_type: "Photo"} %>
   </div>
   <% unless tags.empty? %>
