--- a/app/views/likes/_show.html.erb
+++ b/app/views/likes/_show.html.erb
@@ -21,3 +21,13 @@
     <% end %>
   </li>
 </ul>
+
+<!-- <form action="<%= likes_url %>" method="post">
+  <input
+      name="authenticity_token"
+      type="hidden"
+      value="<%= form_authenticity_token %>">
+  <input type="hidden" name="like_id" value="<%= like.id %>">
+  <input type="hidden" name="user_id" value="<%= params[:user_id] %>">
+  <input type="hidden" name="_method" value="DELETE">
+</form> -->
