major changes to tagging functionality

--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -571,3 +571,10 @@ header {
   border-radius: 4px;
   background: #77F2BB;
 }
+
+// TAGGING STYLING
+
+.tag-form {
+  float: left;
+  margin-right: 10px;
+}
