fixed minor bug

--- a/app/views/photos/_show.html.erb
+++ b/app/views/photos/_show.html.erb
@@ -10,7 +10,7 @@
   </div>
   
   <div class="tagging">
-    <%= render partial: "photos/tagging", locals: { photo: photo } %>
+    <%= render partial: "photos/tagging", locals: { user: user, photo: photo } %>
   </div>
   
   <br>
