a wee bit 'a styling

--- a/app/views/photos/_tagging.html.erb
+++ b/app/views/photos/_tagging.html.erb
@@ -2,48 +2,50 @@
 <% self_tag = tags.where("user_id = ?", current_user.id).first %>
 <% tagged_users = tags.map { |tag| tag.tagged_user } %>
 
-<% unless tags.empty? %>
-  <% unless self_tag.nil? %>
+<div class="group">
+  <% unless tags.empty? %>
+    <% unless self_tag.nil? %>
+      <br>
+      <form class="tag-form" action="<%= tag_url(self_tag) %>" data-remote="true" method="post">
+        <input
+          name="authenticity_token"
+          type="hidden"
+          value="<%= form_authenticity_token %>">
+        <input type="hidden" name="tagged_user_id" value="<%= current_user.id %>">
+        <input type="hidden" name="_method" value="DELETE">
+        <input class="friend-button" type="submit" value="<%= "Remove Tag" %>">
+      </form>
+    <% end %>
     <br>
-    <form class="tag-form" action="<%= tag_url(self_tag) %>" data-remote="true" method="post">
-      <input
-        name="authenticity_token"
-        type="hidden"
-        value="<%= form_authenticity_token %>">
-      <input type="hidden" name="tagged_user_id" value="<%= current_user.id %>">
-      <input type="hidden" name="_method" value="DELETE">
-      <input class="friend-button" type="submit" value="<%= "Remove Tag" %>">
-    </form>
   <% end %>
-  <br>
-<% end %>
-<% friends = current_user.friends %>
-<% if user == current_user || friends.include?(user) %>
-  <% if self_tag.nil? %>
-    <form class="tag-form" action="<%= user_photo_tags_url(user, photo) %>" data-remote="true" method="post">
-      <input
-        name="authenticity_token"
-        type="hidden"
-        value="<%= form_authenticity_token %>">
-      <input type="hidden" name="tagged_user_id" value="<%= current_user.id %>">
-      <input class="friend-button" type="submit" value="<%= "Tag Yourself!" %>">
-    </form>
-  <% end %>
-  <% unless friends.empty? %>
-    <% friends.each do |friend| %>
-      <% unless tagged_users.include?(friend) %>
-        <form class="tag-form" action="<%= user_photo_tags_url(user, photo) %>" data-remote="true" method="post">
-          <input
-            name="authenticity_token"
-            type="hidden"
-            value="<%= form_authenticity_token %>">
-          <input type="hidden" name="tagged_user_id" value="<%= friend.id %>">
-          <input class="friend-button" type="submit" value="<%= "Tag " + friend.name + "!" %>">
-        </form>
+  <% friends = current_user.friends %>
+  <% if user == current_user || friends.include?(user) %>
+    <% if self_tag.nil? %>
+      <form class="tag-form" action="<%= user_photo_tags_url(user, photo) %>" data-remote="true" method="post">
+        <input
+          name="authenticity_token"
+          type="hidden"
+          value="<%= form_authenticity_token %>">
+        <input type="hidden" name="tagged_user_id" value="<%= current_user.id %>">
+        <input class="friend-button" type="submit" value="<%= "Tag Yourself!" %>">
+      </form>
+    <% end %>
+    <% unless friends.empty? %>
+      <% friends.each do |friend| %>
+        <% unless tagged_users.include?(friend) %>
+          <form class="tag-form" action="<%= user_photo_tags_url(user, photo) %>" data-remote="true" method="post">
+            <input
+              name="authenticity_token"
+              type="hidden"
+              value="<%= form_authenticity_token %>">
+            <input type="hidden" name="tagged_user_id" value="<%= friend.id %>">
+            <input class="friend-button" type="submit" value="<%= "Tag " + friend.name + "!" %>">
+          </form>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
-<% end %>
+</div>
 <br>
 <% unless tagged_users.empty? %>
   <h3>Tagged in this photo:</h3>
